specs/blueprints/errors/validation/unexpected_element.eno
# Asserting everything was touched on an untouched document

-- input
field: value
-- input

-- javascript
enolib.parse(input).assertAllTouched();
-- javascript

-- php
Enolib\Parser::parse($input)->assertAllTouched();
-- php

-- python
enolib.parse(input).assert_all_touched()
-- python

-- ruby
Enolib.parse(input).assert_all_touched
-- ruby

## ValidationError

-- text
This element was not expected, make sure it is at the right place in the document and that its key is not mis-typed.
-- text

-- snippet
   Line | Content
 >    1 | field: value
-- snippet

selection: [0,0] => [0,12]

# Asserting everything was touched on an untouched document, with a custom message

-- input
field: value
-- input

-- javascript
enolib.parse(input).assertAllTouched('my custom message');
-- javascript

-- php
Enolib\Parser::parse($input)->assertAllTouched('my custom message');
-- php

-- python
enolib.parse(input).assert_all_touched('my custom message')
-- python

-- ruby
Enolib.parse(input).assert_all_touched('my custom message')
-- ruby

## ValidationError

-- text
my custom message
-- text

-- snippet
   Line | Content
 >    1 | field: value
-- snippet

selection: [0,0] => [0,12]
